# battle-simulator

./: CMakeLists.txt  MacroClassUML.puml  README.md
src/: main.cpp
src/Condition/: AlwaysTrueCondition.hpp  InAttackRangeCondition.hpp
src/Core/: Actor.hpp  ActorComponent.hpp  Condition.hpp  GameObject.hpp  OwnedBy.hpp
src/System/: GameState.cpp  GameState.hpp  Map.cpp  Map.hpp  MapDefines.hpp  Simulation.cpp  Simulation.hpp  SimulationLog.hpp
src/System/Mediator/: CommandHandler.hpp  CreateMapHandler.cpp  CreateMapHandler.hpp  GameCommandMediator.cpp  GameCommandMediator.hpp  GameCommandQueue.cpp  GameCommandQueue.hpp  SpawnHunterHandler.cpp  SpawnHunterHandler.hpp  SpawnSwordsmanHandler.cpp  SpawnSwordsmanHandler.hpp  UnitMarchHandler.cpp  UnitMarchHandler.hpp
src/System/Units/: DamageProcessor.cpp  DamageProcessor.hpp  UnitFactory.cpp  UnitFactory.hpp  UnitRegistry.cpp  UnitRegistry.hpp
src/Units/: StatType.hpp
src/Units/Attacks/: AttackType.hpp  CloseStrengthAttack.hpp  RangeAgilityAttack.hpp
src/Units/Behaviours/: Behaviour.hpp  MoveAndAttackBehaviour.hpp
src/Units/Components/: AttackComponent.cpp  AttackComponent.hpp  BehaviourLogicComponent.cpp  BehaviourLogicComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  StatsComponent.cpp  StatsComponent.hpp
src/Utility/: ServiceDefines.hpp  ServiceLocator.hpp  Vector2.hpp
